:bug: fix: update login API endpoint to include versioning